fix(highlighter): css variable on dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,13 +14,11 @@
     --sh-entity: #e25a1c;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --sh-class: #4c97f8;
-        --sh-identifier: white;
-        --sh-keyword: #f47067;
-        --sh-string: #0fa295;
-    }
+.dark {
+    --sh-class: #4c97f8;
+    --sh-identifier: white;
+    --sh-keyword: #f47067;
+    --sh-string: #0fa295;
 }
 
 .prose .anchor {
